--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -1,30 +1,25 @@
-# This workflow will build a Java project with Maven, and cache/restore any dependencies to improve the workflow execution time
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-maven
-
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
 name: Cucumber Java Selenium Workflow
 
 on:
   workflow_dispatch:
     inputs:
-      environment:
+      env:
         description: 'Environment (dev or stage)'
         required: true
-        default: 'dev'
-        options: ['dev', 'stage']
- 
+        default: ${{ secrets.ENVIRONMENT }}
+      tags:
+        description: 'Tags to run'
+        required: true
+        default: 'all'
+
 jobs:
   run_tests:
     name: Run Cucumber Tests
     runs-on: ubuntu-latest
 
     steps:
-      
-
+      - name: Checkout code
+        uses: actions/checkout@v2
 
       - name: Set up JDK 11
         uses: actions/setup-java@v2
@@ -32,6 +27,9 @@ jobs:
           java-version: 11
 
       - name: Build and run tests
-        run: mvn clean install
-      - name: Run Java Class
-        run: java -cp target/classes org.example.App
+        run: mvn clean install 
+      
+      - name: Run java class
+        run: java -cptarget/classes org.example.App
+  
+
